clean up LaunchFilter